buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
//    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id+'-forge'+minecraft_version + "-" + System.currentTimeSeconds()
}

jarJar.enable()

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {

    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            arg "-mixin.config=skillet_man_core.mixins.json"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
            arg "-mixin.config=skillet_man_core.mixins.json"
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()

    flatDir {
        dirs 'libs'
    }

    maven {
        url "https://repo.spongepowered.org/repository/maven-public/"
    }

    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven { // Registrate
        url "https://maven.tterrag.com/"
    }

    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }

}

reobf {
    jarJar {}
}

tasks.jarJar.finalizedBy('reobfJarJar')

tasks.jarJar.configure {
    archiveClassifier.set('')
}

jar {
    archiveClassifier.set('slim')
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    implementation fg.deobf(jarJar("dev.xkmc.l2library:l2library:2.4.14-slim")) {
        transitive = false
        jarJar.ranged(it, "[2.4.14,)")
    }

    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.2.0")) {
        transitive = false
        jarJar.ranged(it, "[1.2.0,)")
    }

    //史诗战斗
    implementation fg.deobf("curse.maven:epic-fight-mod-405076:6145747")
    implementation fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5889471")
    implementation fg.deobf("libs:super_golem:20.9.1.2")
    implementation fg.deobf("libs:invincible:20.9.20")
//    implementation fg.deobf("curse.maven:epic-fight-invincible-1184379:6447859")
//    implementation fg.deobf("curse.maven:epic-fight-super-golem-1236331:6397690")

    //传送石
    implementation fg.deobf("curse.maven:waystones-245755:6270584")
    implementation fg.deobf("curse.maven:balm-531761:6362504")

    //更好的村庄
    implementation fg.deobf("curse.maven:better-village-forge-615352:6306266")
    implementation fg.deobf("curse.maven:library-ferret-forge-532727:4601234")

    //农夫乐事 生活调味料
    implementation fg.deobf("curse.maven:farmers-delight-398521:6154802")
    implementation fg.deobf("curse.maven:cuisine-delight-893541:5814261")
    implementation fg.deobf("curse.maven:spice-of-life-carrot-edition-277616:4888575")

    implementation fg.deobf("curse.maven:kaleidoscope-doll-1233277:6373592")

    implementation fg.deobf("curse.maven:hungteens-lib-794622:5782587")

    implementation fg.deobf("curse.maven:epic-terrain-compatible-1137535:6439744")

    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-1.20.1:4.4.7")
    implementation fg.deobf("curse.maven:fantasy-armor-1083998:6385161")

    implementation fg.deobf("curse.maven:sophisticated-core-618298:6266807")
    implementation fg.deobf("curse.maven:sophisticated-backpacks-422301:6246607")

    implementation fg.deobf("curse.maven:yungs-better-end-island-901344:5193815")
    implementation fg.deobf("curse.maven:yungs-api-421850:5769971")

    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
    implementation fg.deobf("curse.maven:oculus-581495:6020952")
//    implementation fg.deobf("curse.maven:distant-horizons-508933:6387680")

//    implementation fg.deobf("curse.maven:leawind-third-person-930880:5961735")
//    implementation fg.deobf("libs:eflw:20.9.0")

    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))


    compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
    jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")

}

mixin {
    add sourceSets.main, 'skillet_man_core.mixin-refmap.json'
    config 'skillet_man_core.mixins.json'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs": "skillet_man_core.mixins.json"
        ])
    }

    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
